--- a/app/src/main/res/drawable/border_bg_white.xml
+++ b/app/src/main/res/drawable/border_bg_white.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <stroke android:color="@color/colorPrimary"
-        android:width="3px"/>
+    <stroke android:color="@color/white"
+        android:width="5px"/>
 
     <corners android:radius="@dimen/_5sdp"/>
 </shape>
