--- a/app/src/main/res/drawable/top_rounded_layout_bg.xml
+++ b/app/src/main/res/drawable/top_rounded_layout_bg.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/colorPrimary"/>
-
-    <corners android:radius="@dimen/_5sdp"/>
     <gradient android:startColor="@color/colorPrimary"
         android:centerColor="@color/colorPrimary"
         android:endColor="@color/colorAccent"
-        android:angle="0"/>
+        android:angle="270"/>
 
-
+    <corners android:topLeftRadius="@dimen/_15sdp"
+        android:topRightRadius="@dimen/_15sdp"/>
 </shape>
