--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -10,19 +10,10 @@
     tools:context=".SplashActivity">
 
     <ImageView
-        android:layout_width="@dimen/_150sdp"
-        android:layout_height="@dimen/_150sdp"
-        android:src="@mipmap/ic_launcher"/>
+        android:layout_width="@dimen/_180sdp"
+        android:layout_height="@dimen/_120sdp"
+        android:src="@drawable/logo" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/app_name"
-        android:textColor="@color/white"
-        android:background="@drawable/button_bg"
-        android:padding="@dimen/_10sdp"
-        android:textSize="@dimen/_15sdp"
-        android:layout_margin="@dimen/_20sdp"
-        android:textStyle="bold"/>
+
 
 </LinearLayout>
