after some changes

--- a/app/src/main/res/layout/activity_add_payment.xml
+++ b/app/src/main/res/layout/activity_add_payment.xml
@@ -35,7 +35,7 @@
                 android:paddingLeft="@dimen/_10sdp"
                 android:paddingRight="@dimen/_10sdp"
                 android:textSize="@dimen/_12sdp"
-                android:textColor="@color/colorPrimary"
+                android:textColor="@color/black"
                 android:inputType="textPersonName" />
         </androidx.cardview.widget.CardView>
         <androidx.cardview.widget.CardView
@@ -54,7 +54,7 @@
                 android:paddingLeft="@dimen/_10sdp"
                 android:paddingRight="@dimen/_10sdp"
                 android:textSize="@dimen/_12sdp"
-                android:textColor="@color/colorPrimary"
+                android:textColor="@color/black"
                 android:inputType="phone" />
         </androidx.cardview.widget.CardView>
         <androidx.cardview.widget.CardView
